fix(deploy): display issue only visible on deployment

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -38,7 +38,7 @@
     }
 
     .large-screen {
-        display: contents;
+        display: initial;
     }
 
     .home-background-photo {
